exports[`test should render default table header content tag 1`] = `
<th
  className="terra-Table-min-width--small terra-Table-header">
  <div>
    Column Heading
  </div>
</th>
`;

exports[`test should render table header content tag with ascending sort indicator 1`] = `
<th
  className="terra-Table-min-width--small terra-Table-header"
  data-sort="asc">
  <div>
    Column Heading
    <span
      className="terra-Table-sort-indicator">
      <IconCaretUp
        className=""
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg" />
    </span>
  </div>
</th>
`;

exports[`test should render table header content tag with descending sort indicator 1`] = `
<th
  className="terra-Table-min-width--small terra-Table-header"
  data-sort="desc">
  <div>
    Column Heading
    <span
      className="terra-Table-sort-indicator">
      <IconCaretDown
        className=""
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg" />
    </span>
  </div>
</th>
`;

exports[`test should render table header content tag with maximum height fixed 1`] = `
<th
  className="terra-Table-min-width--small terra-Table-header-max-height--small terra-Table-header">
  <div>
    Column Heading
  </div>
</th>
`;
